# Chirp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Contributing.md  README.md  build.sh  debug.sh  out.o.asm
Source/: Build.cpp  CMakeLists.txt  Chirp.cpp  Chirp.h
Source/Compiler/: Assembly.cpp  Assembly.h  Function.cpp  Function.h  Object.cpp  Object.h  Output.cpp  Output.h  Scope.cpp  Scope.h  Statement.cpp  Statement.h  Syntax.cpp  Syntax.h  Value.cpp  Value.h  Variable.cpp  Variable.h
Source/Compiler/Analyser/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Scope.cpp  Syntax.cpp  Syntax.h  Token.h  Tree.cpp  Tree.h
Source/Console/: Commands.cpp  Commands.h  Debug.cpp  Debug.h  Keyboard.cpp  Keyboard.h  Menu.cpp  Menu.h
Source/Console/Log/: Color.cpp  Log.cpp  Log.h
Source/Parser/: Assembly.cpp  Parser.cpp  Parser.h  Statement.cpp  Tree.h
Test/: preprocessor.ch  test_main.ch
docs/: ast.md  command-line.md  intermediate-code.md  intermediate-representation.md  parsing.md  readme.md
src/: CMakeLists.txt  build.cpp  build.h  chirp.cpp  chirp.h  error.cpp  error.h  other.cpp  preprocessor.cpp  preprocessor.h
src/cli/: cli.cpp  cli.h  log.cpp  log.h
src/drawing/: simple_tree_drawer.hpp  tree_drawer.hpp
src/parser/: lexer.cpp  lexer.h  parser.cpp  parser.h  semantic.cpp  semantic.h  syntax.cpp  syntax.h  token.cpp  token.h  tree.cpp  tree.h  tree_interface.hpp
test/: asm.ch  comments.ch  conditions.ch  constant_math.ch  entry.ch  function_def.ch  general_functions.ch  scopes.ch  variable_assignement.ch  variable_assignment.ch  variable_dec.asm  variable_dec.ch  variable_math.ch
